# genix

./: .cursorrules  .gitattributes  .gitignore  .rules  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN_POINT_OF_SALE.md  IMPLEMENTATION_PLAN_SALES.md  PLAN_image_autoincrement.md  PLAN_image_prefetch_counter.md  PLAN_product_ecommerce_db.md  PLAN_text_search_testing.md  README.md  RENAME_TO_ENGLISH.md  Untitled  access_list.tsv  access_list.yml  app.sh  connect_db.sh  create_edit_table  credentials_example.json  deploy.sh  manifest.webmanifest  package.json  pnpm-lock.yaml  start.js  start.sh
.claude/: settings.json
.zed/: settings.json
ai/: FUNCTION_GEMMA.md  QUICK_START.md  README_TRAINING.md  SPOT_INSTANCES_GUIDE.md  convert_to_litertlm.py  convert_to_mlc.py  follow_logs.py  gemma_generator.py  gemma_training_data.jsonl  gemma_training_data.py  inference.py  inference_vulkan.py  install_launcher.sh  launch_sagemaker_convert.py  launch_sagemaker_train.py  package.json  requirements.launcher.txt  test_weights.py  validate.py  view_training_logs.py
backend/: .gitignore  Genix.session.sql  Genixc.session.sql  README.md  access-list.go  access_list.yml  dasd.json  deploy.sh  genix.service  go.mod  go.sum  go.work.sum  main-handlers.go  main-test.go  main.go  refactor.py  samconfig.toml
cloud/: cdk.json  cdk_infra.go  cloudflare_infra.go  cloudformation.yml  go.mod  go.sum  helpers.go  lambda-zip.go  main.go
db-backup/: backup.go  (+4 more)
image-converter/: .gitignore  Cargo.toml  script.txt
image-converter/src/: main.rs
image-converter/test_inputs/: demo.avif
(+3379 files in other folders)
