[package]
name = "avif-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imgref = "1.10.1"
libavif = "0.12.0"
libavif-image = "0.11.0"
load_image = "3.1.4"
ravif = "0.11.4"
webp = "0.2.6"
